syntax = "proto3";

package buildbarn.configuration.bb_storage;

import "pkg/proto/configuration/blobstore/blobstore.proto";
import "pkg/proto/configuration/builder/builder.proto";
import "pkg/proto/configuration/global/global.proto";
import "pkg/proto/configuration/grpc/grpc.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/storage";

message ApplicationConfiguration {
  // Blobstore configuration for the Content Addressable Storage (CAS)
  // and Action Cache (AC).
  buildbarn.configuration.blobstore.BlobstoreConfiguration blobstore = 1;

  // Jaeger configuration has moved into 'global'.
  reserved 2;

  // Was 'http_listen_address'. This option has been moved to
  // 'global.diagnostics_http_listen_address'.
  reserved 3;

  // gRPC servers to spawn to listen for requests from clients.
  repeated buildbarn.configuration.grpc.ServerConfiguration grpc_servers = 4;

  // Map of schedulers available capable of running build actions, where
  // the key corresponds to the instance name prefix. In case of
  // multiple matches, the scheduler with the longest matching prefix is
  // used. The matching prefix is removed from the resulting instance
  // name.
  //
  // For example, if schedulers for instance name prefixes "acmecorp"
  // and "acmecorp/rockets" are declared, requests for instance name
  // "acmecorp/rockets/mars" will be forwarded to the latter. This
  // scheduler will receive requests with instance name "mars".
  //
  // The empty string can be used to match all instance names, thereby
  // causing all requests to be forwarded to a single scheduler.
  map<string, buildbarn.configuration.builder.SchedulerConfiguration>
      schedulers = 5;

  // List of instance name prefixes for which uploads to the Action
  // Cache are permitted. The empty string can be used to match all
  // instance names, thereby permitting uploads for all instance names.
  repeated string allow_ac_updates_for_instance_name_prefixes = 6;

  // Was 'verify_action_result_completeness'. This can now be enabled by
  // using BlobAccessConfiguration.completeness_checking.
  reserved 7;

  // Maximum Protobuf message size to unmarshal.
  int64 maximum_message_size_bytes = 8;

  // Common configuration options that apply to all Buildbarn binaries.
  buildbarn.configuration.global.Configuration global = 9;

  // Blobstore configuration for the Indirect Content Addressable
  // Storage (ICAS).
  buildbarn.configuration.blobstore.BlobAccessConfiguration
      indirect_content_addressable_storage = 10;
}
